apps/enqueuer/kustomize/ephemeral-base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enqueuer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: enqueuer
  template:
    metadata:
      labels:
        app: enqueuer
    spec:
      containers:
        - name: enqueuer
          image: registry.fullstack.pw/library/enqueuer:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
