apps/enqueuer/kustomize/ephemeral-base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: enqueuer
spec:
  selector:
    app: enqueuer
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  type: ClusterIP
